leaderboard bugs squished

--- a/src/components/leaderBoardInput.scss
+++ b/src/components/leaderBoardInput.scss
@@ -15,11 +15,12 @@
   align-items: center;
 
   z-index: 3;
+  opacity: 1;
 
   padding-left: 4vw;
   padding-right: 4vw;
 
-  transition: all 0.8s ease;
+  transition: top 0.8s ease;
 
   img {
     position: absolute;
@@ -78,5 +79,5 @@
 .ldbInputHide {
   z-index: -50;
   top: 100vh;
-  opacity: 1;
+  opacity: 0;
 }
